--- a/index.html
+++ b/index.html
@@ -67,7 +67,69 @@
         </div>
     </section>
 
+<!-- Area de botones   --------------------------------------------------->
 
+    <section  class="container">
+        <div class="row espacioAbajo">
+            <div class=" page-header col-md-12"> <!-- realiza linea de division -->
+                <h2>Buttons</h2>
+            </div>
+        </div>
+        <div class="row espacioAbajo">
+            <div class="col-mn-12">
+                <button type="button" class="btn btn-lg btn-default">Default</button>
+                <button type="button" class="btn btn-lg btn-primary">Primary</button>
+                <button type="button" class="btn btn-lg btn-success">Success</button>
+                <button type="button" class="btn btn-lg btn-info">Info</button>
+                <button type="button" class="btn btn-lg btn-warning">Warning</button>
+                <button type="button" class="btn btn-lg btn-danger">Danger</button>
+                <button type="button" class="btn btn-lg btn-link">Link</button>
+            </div>
+        </div>
+        <div class="row espacioAbajo">
+            <div class="col-mn-12">
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-success">Success</button>
+                <button type="button" class="btn btn-info">Info</button>
+                <button type="button" class="btn btn-warning">Warning</button>
+                <button type="button" class="btn btn-danger">Danger</button>
+                <button type="button" class="btn btn-link">Link</button>
+            </div>
+        </div>
+        <div class="row espacioAbajo">
+            <div class="col-mn-12">
+                <button type="button" class="btn btn-sm btn-default">Default</button>
+                <button type="button" class="btn btn-sm btn-primary">Primary</button>
+                <button type="button" class="btn btn-sm btn-success">Success</button>
+                <button type="button" class="btn btn-sm btn-info">Info</button>
+                <button type="button" class="btn btn-sm btn-warning">Warning</button>
+                <button type="button" class="btn btn-sm btn-danger">Danger</button>
+                <button type="button" class="btn btn-sm btn-link">Link</button>
+            </div>
+        </div>
+        <div class="row espacioAbajo">
+            <div class="col-mn-12">
+                <button type="button" class="btn btn-xs btn-default">Default</button>
+                <button type="button" class="btn btn-xs btn-primary">Primary</button>
+                <button type="button" class="btn btn-xs btn-success">Success</button>
+                <button type="button" class="btn btn-xs btn-info">Info</button>
+                <button type="button" class="btn btn-xs btn-warning">Warning</button>
+                <button type="button" class="btn btn-xs btn-danger">Danger</button>
+                <button type="button" class="btn btn-xs btn-link">Link</button>
+            </div>
+            <div class="row espacioAbajo">
+                <div class="col-mn-12">
+                    <button type="button" class="btn btn-xs btn-default">Default</button>
+                    <button type="button" class="btn btn-xs btn-primary">Primary</button>
+                    <button type="button" class="btn btn-xs btn-success">Success</button>
+                    <button type="button" class="btn btn-xs btn-info">Info</button>
+                    <button type="button" class="btn btn-xs btn-warning">Warning</button>
+                    <button type="button" class="btn btn-xs btn-danger">Danger</button>
+                    <button type="button" class="btn btn-xs btn-link">Link</button>
+                </div>
+        </div>
+    </section>
 
 
 
