--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section  class="container" >
         <div class="row espacioAbajo">
-            <div class="col-md-12 col-xs-12 col-sm-12">
+            <div class="col-md-12 hidden-xs"><!--Si aplicamos esta clase no aparecerá en la versión móvil pero si desde un ordenador o tablet  ----->
                 <div class="jumbotron">
                     <h1 >Theme example</h1>
                     <!-- class="lead" es una parte mas importante del parrafo-->
@@ -716,13 +716,15 @@
          <div class="row">
            <div class="col-md-12">
              <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicadores para saber que imagen esta inicialmente.la clase active es la que
+            muestra la primera imagen, por eso esta activa de lo contrario no funciona --->
                <ol class="carousel-indicators">
                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                  <li data-target="#myCarousel" data-slide-to="1"></li>
                  <li data-target="#myCarousel" data-slide-to="2"></li>
               </ol>
               <div class="carousel-inner">
-                <div class="item active">
+                <div class="item active"><!--La clase "item active" es la clase que se mostrará al cargar la página---->
                   <img src="fondo1.jpg"  style="width:100%;">
                 </div>
                 <div class="item">
