agregando elemento solo para movil

--- a/prueba.html
+++ b/prueba.html
@@ -371,7 +371,9 @@
        </div>
      </div>
   </section>
-        <!-- BADGES -->
+
+  <!--Area de Badges   -------------------------------------------------------->
+
         <section id="distintivos" class="container">
             <div class="row espacioAbajo">
                 <div class="page-header col-md-12">
@@ -379,7 +381,7 @@
                 </div>
             </div>
             <div class="row espacioAbajo">
-                <div class="col-md-12">
+                <div class="col-md-12 col-sm-12 col-xs-12  ">
                     <a href="#">Inbox <span class="badge">42</span></a>
                 </div>
             </div>
@@ -398,7 +400,7 @@
         <section  class="container">
             <div class="row espacioAbajo">
               <div class=" col-md-12 page-header">
-                <h2>Dropdown enus</h2>
+                <h2>Dropdown Menus</h2>
               </div>
             </div>
             <div class="row espacioAbajo">
@@ -621,9 +623,10 @@
         </section>
 
 <!--Area de panels   -------------------------------------------------->
+
         <section class="container">
           <div class="row espacioAbajo">
-            <div class="col-md-12">
+            <div class="col-md-12 visible-xs">
               <h2>Panels </h2>
             </div>
           </div>
@@ -702,26 +705,12 @@
            </div>
 
          </div>
-         <div class="row espacioAbajo">
-           <div class="col-12 visible-xs"><!-- solo se mostrara para movil-->
-             <div class="container">
-               <h2>Simple Collapsible</h2>
-               <p>Click on the button to toggle between showing and hiding content.</p>
-               <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
-               <div id="demo" class="collapse">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               </div>
-             </div>
-           </div>
-
-         </div>
        </section>
 
 
 
-<!--- Seccion de Carrusel    --------------------------------------------------->
+<!--- Seccion de slider Carrusel    --------------------------------------------------->
+
        <section class="container">
          <div class="row">
            <div class="col-md-12 page-header">
@@ -730,7 +719,7 @@
          </div>
          <div class="row">
            <div class="col-md-12">
-             <div id="myCarousel" class="carousel slide" data-ride="carousel">
+             <div  class="carousel slide" data-ride="carousel"><!--se pondra un id si es necesario poner mas de un carrusel--->
             <!-- Indicadores para saber que imagen esta inicialmente.la clase active es la que
             muestra la primera imagen, por eso esta activa de lo contrario no funciona --->
                <ol class="carousel-indicators">
@@ -739,7 +728,7 @@
                  <li data-target="#myCarousel" data-slide-to="2"></li>
               </ol>
               <div class="carousel-inner">
-                <div class="item active"><!--La clase "item active" es la clase que se mostrará al cargar la página---->
+                <div class="item active"> <!--La clase "item active" es la clase que se mostrará al cargar la página---->
                   <img src="fondo1.jpg"  style="width:100%;">
                 </div>
                 <div class="item">
@@ -764,8 +753,9 @@
    </section>
 
     <!-- jquery y Bootstrap poner por orden -->
-    <script src="js/jquery.js"></script>
+
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
 
 </body>
 
